// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderLarkCardElements 视觉快照 > completed 态：思考 + 工具调用/结果 + 终态输出 1`] = `
{
  "body": {
    "direction": "vertical",
    "elements": [
      {
        "content": "全部通过。",
        "element_id": "final_output",
        "margin": "0px",
        "tag": "markdown",
        "text_align": "left",
        "text_size": "normal_v2",
      },
      {
        "direction": "vertical",
        "element_id": "trace_overview",
        "elements": [
          {
            "direction": "vertical",
            "element_id": "trace_group_0",
            "elements": [
              {
                "behaviors": [],
                "direction": "vertical",
                "element_id": "trace_tool_0_0",
                "elements": [
                  {
                    "content": "pnpm test",
                    "icon": {
                      "color": "grey",
                      "tag": "standard_icon",
                      "token": "doc-checklist_outlined",
                    },
                    "tag": "markdown",
                    "text_size": "notation",
                  },
                  {
                    "content": "\`\`\`text
125 passed
\`\`\`",
                    "margin": "0px",
                    "tag": "markdown",
                    "text_size": "notation",
                  },
                ],
                "has_border": false,
                "margin": "0px",
                "padding": "0px",
                "tag": "interactive_container",
                "vertical_spacing": "4px",
              },
            ],
            "expanded": false,
            "header": {
              "icon": {
                "color": "grey",
                "size": "14px 14px",
                "tag": "standard_icon",
                "token": "down-small-ccm_outlined",
              },
              "icon_expanded_angle": -180,
              "icon_position": "right",
              "title": {
                "content": "运行测试 · pnpm test",
                "tag": "markdown",
                "text_size": "notation",
              },
              "vertical_align": "center",
            },
            "margin": "0px",
            "padding": "2px 0px 0px 0px",
            "tag": "collapsible_panel",
            "vertical_spacing": "2px",
          },
        ],
        "expanded": false,
        "header": {
          "icon": {
            "color": "grey",
            "size": "14px 14px",
            "tag": "standard_icon",
            "token": "down-small-ccm_outlined",
          },
          "icon_expanded_angle": -180,
          "icon_position": "right",
          "title": {
            "content": "执行记录",
            "tag": "markdown",
            "text_size": "notation",
          },
          "vertical_align": "center",
        },
        "margin": "8px 0px 0px 0px",
        "padding": "4px 0px 0px 0px",
        "tag": "collapsible_panel",
        "vertical_spacing": "2px",
      },
      {
        "columns": [
          {
            "elements": [
              {
                "content": "<font color='grey'>用时 2s</font>",
                "element_id": "task_elapsed",
                "margin": "0px",
                "tag": "markdown",
                "text_size": "x-small",
              },
            ],
            "tag": "column",
            "vertical_align": "center",
            "weight": 1,
            "width": "weighted",
          },
        ],
        "flex_mode": "none",
        "horizontal_spacing": "8px",
        "margin": "6px 0px 0px 0px",
        "tag": "column_set",
      },
    ],
    "padding": "10px 12px 10px 12px",
    "vertical_spacing": "8px",
  },
  "config": {
    "streaming_mode": false,
    "style": {
      "color": {
        "current_bg": {
          "dark_mode": "rgba(30,40,56,1)",
          "light_mode": "rgba(240,245,253,1)",
        },
        "trace_failure": {
          "dark_mode": "rgba(255,178,102,1)",
          "light_mode": "rgba(163,77,0,1)",
        },
        "trace_running": {
          "dark_mode": "rgba(124,202,242,1)",
          "light_mode": "rgba(36,91,219,1)",
        },
        "trace_success": {
          "dark_mode": "rgba(118,204,142,1)",
          "light_mode": "rgba(46,161,33,1)",
        },
      },
    },
    "summary": {
      "content": "验证 Dutydeck 测试 · 已完成",
    },
    "update_multi": true,
    "width_mode": "default",
  },
  "header": {
    "padding": "10px 12px 8px 12px",
    "subtitle": {
      "content": "Dutydeck",
      "tag": "plain_text",
    },
    "template": "green",
    "title": {
      "content": "验证 Dutydeck 测试",
      "tag": "plain_text",
    },
  },
  "schema": "2.0",
}
`;

exports[`renderLarkCardElements 视觉快照 > renderLarkTrace markdown 形态（completed） 1`] = `
"**内部分析**

> Agent 已完成内部分析（推理原文不展示）

---

**工具 · Bash** · completed

\`\`\`text
125 passed
\`\`\`

---

**Agent**

全部通过。"
`;

exports[`renderLarkCardElements 视觉快照 > running 态：进展文本 + 进行中的工具调用 1`] = `
{
  "body": {
    "direction": "vertical",
    "elements": [
      {
        "columns": [
          {
            "elements": [
              {
                "element_id": "task_status",
                "icon": {
                  "color": "grey",
                  "size": "14px 14px",
                  "tag": "standard_icon",
                  "token": "loading_outlined",
                },
                "margin": "0px",
                "tag": "div",
                "text": {
                  "content": "<font color='grey'>已用时 2s</font>",
                  "tag": "lark_md",
                  "text_size": "small",
                },
                "width": "auto",
              },
            ],
            "tag": "column",
            "vertical_align": "center",
            "weight": 1,
            "width": "weighted",
          },
          {
            "elements": [
              {
                "behaviors": [
                  {
                    "type": "callback",
                    "value": {
                      "action": "interrupt",
                      "task_id": "task-running",
                      "turn": "0",
                    },
                  },
                ],
                "element_id": "interrupt",
                "margin": "0px",
                "size": "small",
                "tag": "button",
                "text": {
                  "content": "中断",
                  "tag": "plain_text",
                },
                "type": "danger",
              },
            ],
            "tag": "column",
            "vertical_align": "center",
            "width": "72px",
          },
        ],
        "element_id": "task_action_row",
        "flex_mode": "none",
        "horizontal_spacing": "8px",
        "margin": "0px",
        "tag": "column_set",
        "vertical_align": "center",
      },
      {
        "background_style": "current_bg",
        "behaviors": [],
        "corner_radius": "8px",
        "direction": "vertical",
        "element_id": "trace_group_0",
        "elements": [
          {
            "content": "正在分析需求，先跑一遍测试。",
            "element_id": "current_title",
            "margin": "0px",
            "tag": "markdown",
            "text_size": "normal",
          },
          {
            "content": "<font color='trace_running'>●</font>　pnpm test",
            "element_id": "trace_tool_0_0",
            "icon": {
              "color": "grey",
              "tag": "standard_icon",
              "token": "doc-checklist_outlined",
            },
            "margin": "0px",
            "tag": "markdown",
            "text_size": "notation",
          },
        ],
        "has_border": false,
        "margin": "0px",
        "padding": "8px 10px 8px 10px",
        "tag": "interactive_container",
        "vertical_spacing": "4px",
      },
    ],
    "padding": "10px 12px 10px 12px",
    "vertical_spacing": "8px",
  },
  "config": {
    "streaming_mode": true,
    "style": {
      "color": {
        "current_bg": {
          "dark_mode": "rgba(30,40,56,1)",
          "light_mode": "rgba(240,245,253,1)",
        },
        "trace_failure": {
          "dark_mode": "rgba(255,178,102,1)",
          "light_mode": "rgba(163,77,0,1)",
        },
        "trace_running": {
          "dark_mode": "rgba(124,202,242,1)",
          "light_mode": "rgba(36,91,219,1)",
        },
        "trace_success": {
          "dark_mode": "rgba(118,204,142,1)",
          "light_mode": "rgba(46,161,33,1)",
        },
      },
    },
    "summary": {
      "content": "验证 Dutydeck 测试 · 执行中",
    },
    "update_multi": true,
    "width_mode": "default",
  },
  "header": {
    "padding": "10px 12px 8px 12px",
    "subtitle": {
      "content": "Dutydeck",
      "tag": "plain_text",
    },
    "template": "blue",
    "title": {
      "content": "验证 Dutydeck 测试",
      "tag": "plain_text",
    },
  },
  "schema": "2.0",
}
`;

exports[`renderLarkCardElements 视觉快照 > 待审批态：高风险操作使用强提醒且不伪造操作按钮 1`] = `
{
  "body": {
    "direction": "vertical",
    "elements": [
      {
        "columns": [
          {
            "elements": [
              {
                "element_id": "task_status",
                "margin": "0px",
                "tag": "div",
                "text": {
                  "content": "<text_tag color='orange'>等待审批</text_tag>　<font color='grey'>已用时 2s</font>",
                  "tag": "lark_md",
                  "text_size": "small",
                },
                "width": "auto",
              },
            ],
            "tag": "column",
            "vertical_align": "center",
            "weight": 1,
            "width": "weighted",
          },
          {
            "elements": [
              {
                "behaviors": [
                  {
                    "type": "callback",
                    "value": {
                      "action": "interrupt",
                      "task_id": "task-approval",
                      "turn": "0",
                    },
                  },
                ],
                "element_id": "interrupt",
                "margin": "0px",
                "size": "small",
                "tag": "button",
                "text": {
                  "content": "中断",
                  "tag": "plain_text",
                },
                "type": "danger",
              },
            ],
            "tag": "column",
            "vertical_align": "center",
            "width": "72px",
          },
        ],
        "element_id": "task_action_row",
        "flex_mode": "none",
        "horizontal_spacing": "8px",
        "margin": "0px",
        "tag": "column_set",
        "vertical_align": "center",
      },
      {
        "content": "高危操作：删除构建缓存目录",
        "element_id": "risk_alert_pending_0",
        "margin": "6px 0px 8px 0px",
        "tag": "markdown",
        "text_size": "normal",
      },
      {
        "background_style": "current_bg",
        "behaviors": [],
        "corner_radius": "8px",
        "direction": "vertical",
        "element_id": "trace_group_0",
        "elements": [
          {
            "content": "准备清理构建缓存。",
            "element_id": "current_title",
            "margin": "0px",
            "tag": "markdown",
            "text_size": "normal",
          },
        ],
        "has_border": false,
        "margin": "0px",
        "padding": "8px 10px 8px 10px",
        "tag": "interactive_container",
        "vertical_spacing": "4px",
      },
    ],
    "padding": "10px 12px 10px 12px",
    "vertical_spacing": "8px",
  },
  "config": {
    "streaming_mode": true,
    "style": {
      "color": {
        "current_bg": {
          "dark_mode": "rgba(30,40,56,1)",
          "light_mode": "rgba(240,245,253,1)",
        },
        "trace_failure": {
          "dark_mode": "rgba(255,178,102,1)",
          "light_mode": "rgba(163,77,0,1)",
        },
        "trace_running": {
          "dark_mode": "rgba(124,202,242,1)",
          "light_mode": "rgba(36,91,219,1)",
        },
        "trace_success": {
          "dark_mode": "rgba(118,204,142,1)",
          "light_mode": "rgba(46,161,33,1)",
        },
      },
    },
    "summary": {
      "content": "清理构建缓存 · 等待审批",
    },
    "update_multi": true,
    "width_mode": "default",
  },
  "header": {
    "padding": "10px 12px 8px 12px",
    "subtitle": {
      "content": "Dutydeck",
      "tag": "plain_text",
    },
    "template": "orange",
    "title": {
      "content": "清理构建缓存",
      "tag": "plain_text",
    },
  },
  "schema": "2.0",
}
`;
